--- a/frontend/src/components/Navbar.css
+++ b/frontend/src/components/Navbar.css
@@ -15,16 +15,22 @@
 .navbar__logo {
   padding-top: 2%;
   padding-left: 2%;
+  padding-bottom: 2%;
   font-size: 1.2rem;
   font-weight: 500;
   cursor: pointer;
 }
 .navbar__right {
   display: flex;
-  padding-right: 8%;
+  width: 45vh;
   padding-top: 2%;
+  padding-bottom: 2%;
 }
 .navbar__right > p {
+  font-weight: 400;
+  font-size: 1.2rem;
+  padding-left: 4%;
+  padding-right: 4%;
   cursor: pointer;
 }
 .navbar__right :hover {
