Added Sigin/up button and minute changes

--- a/frontend/src/components/Footer.css
+++ b/frontend/src/components/Footer.css
@@ -5,7 +5,7 @@ footer {
   font-size: 14px;
   text-align: center;
   position: relative;
-  background-color: rgba(87, 84, 84, 0.8);
+  background-color: #4fc3f7;
 }
 
 /* copyright */
