--- a/frontend/src/components/Navbar.css
+++ b/frontend/src/components/Navbar.css
@@ -13,9 +13,9 @@
   color: white;
 }
 .navbar__logo {
-  padding-top: 1.2%;
+  padding-top: 1.5%;
   padding-left: 1.2%;
-  padding-bottom: 1.2%;
+  padding-bottom: 1.5%;
   font-size: 1.2rem;
   font-weight: 500;
   cursor: pointer;
@@ -31,7 +31,23 @@
   font-size: 1.2rem;
   padding-left: 4%;
   padding-right: 4%;
+  padding-top: 1.5%;
+  padding-bottom: 1.5%;
   cursor: pointer;
+}
+.navbar__right > a {
+  font-weight: 400;
+  font-size: 1.2rem;
+  padding-top: 1.5%;
+  padding-bottom: 1.5%;
+  padding-left: 4%;
+  padding-right: 4%;
+  cursor: pointer;
+  text-decoration: none;
+  color: white;
+  border: 1px solid #300bd3;
+  background-color: #300bd3;
+  border-radius: 5px;
 }
 .navbar__right :hover {
   transform: scale(1.2);
@@ -41,6 +57,7 @@
   display: none;
   cursor: pointer;
 }
+
 .menu {
   display: none;
 }
