--- a/frontend/src/components/random.css
+++ b/frontend/src/components/random.css
@@ -1,10 +1,11 @@
 .MuiGridList-root {
-  display: flex;
   padding: 4px;
   flex-wrap: wrap;
   list-style: none;
-  overflow-y: hidden !important;
+
   -webkit-overflow-scrolling: touch;
+
+  overflow-y: hidden !important;
   font-weight: 500;
 }
 
@@ -14,8 +15,9 @@
 
 .image {
   display: block;
-  width: 100%;
-  height: auto;
+  /* width: 100%;
+  height: auto; */
+  object-fit: contain;
 }
 
 .overlay {
@@ -24,7 +26,7 @@
   bottom: 0;
   left: 0;
   right: 0;
-  height: 100%;
+  /* height: 100%; */
   width: 100%;
   opacity: 0;
   transition: 0.5s ease;
