--- a/frontend/src/components/Banner/Banner.css
+++ b/frontend/src/components/Banner/Banner.css
@@ -1,5 +1,5 @@
 .banner {
-  height: 637px;
+  height: 550px;
   object-fit: contain;
 }
 .banner__content {
@@ -7,6 +7,31 @@
 
   display: block;
   text-align: center;
+}
+
+.banner__form {
+  display: flex;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: left;
+  background-color: rgba(1, 1, 1, 0.5);
+  padding: 1%;
+  border-radius: 10px;
+  width: 25%;
+}
+@media (max-width: 880px) {
+  .banner__content {
+    padding-top: 35%;
+  }
+  .banner__form {
+    font-size: 0.5rem;
+    width: 35%;
+  }
+}
+@media (max-width: 660px) {
+  .banner__content {
+    padding-top: 55%;
+  }
 }
 /* X: 0px
 Y: 0px
