--- a/frontend/src/components/Navbar/Navbar.css
+++ b/frontend/src/components/Navbar/Navbar.css
@@ -22,6 +22,8 @@
 }
 .navbar__right {
   display: flex;
+  justify-content: space-between;
+  padding-right: 1.5%;
   width: 45vh;
   padding-top: 2%;
   padding-bottom: 2%;
@@ -29,8 +31,6 @@
 .navbar__right > p {
   font-weight: 400;
   font-size: 1.2rem;
-  padding-left: 4%;
-  padding-right: 4%;
   padding-top: 1.5%;
   padding-bottom: 1.5%;
   cursor: pointer;
@@ -40,8 +40,8 @@
   font-size: 1.2rem;
   padding-top: 1.5%;
   padding-bottom: 1.5%;
-  padding-left: 4%;
-  padding-right: 4%;
+  padding-left: 2%;
+  padding-right: 2%;
   cursor: pointer;
   text-decoration: none;
   color: white;
