Google button added

--- a/frontend/src/components/Footer/Footer.css
+++ b/frontend/src/components/Footer/Footer.css
@@ -5,7 +5,7 @@ footer {
   font-size: 14px;
   text-align: center;
   position: relative;
-  background-color: #4fc3f7;
+  background-color: #3b3251;
 }
 
 /* copyright */
