--- a/frontend/src/components/main-event/Main.css
+++ b/frontend/src/components/main-event/Main.css
@@ -1,16 +1,13 @@
-.text-work
-{
-    margin-top: 1%;
-    color: rgb(92, 85, 85);
-    border-bottom: 0.5px solid #e5e7e8;
-    text-align: center;
-
+.text-work {
+  margin-top: 1%;
+  color: rgb(92, 85, 85);
+  /* border-bottom: 0.5px solid #e5e7e8; */
+  text-align: center;
 }
 
-.text-work2
-{
-    margin-top: 1%;
-    color: rgb(92, 85, 85);
-    border-bottom: 0.5px solid #e5e7e8;
-    text-align: center;
+.text-work2 {
+  margin-top: 1%;
+  color: rgb(92, 85, 85);
+  /* border-bottom: 0.5px solid #e5e7e8; */
+  text-align: center;
 }
