--- a/frontend/src/components/main-event/MainEvent.css
+++ b/frontend/src/components/main-event/MainEvent.css
@@ -1,67 +1,68 @@
 .banner2 {
-    width: 100%;
-    height: 450px;
-  }
-  
-  .company {
-    bottom: 110px;
-    box-sizing: border-box;
-    float: left;
-    position: relative;
-    width: 150px;
-    height: 150px;
-    padding: 4px;
-    margin-left: 8%;
-  }
-  
-  .side {
-    width: 100%;
-    height: 300px;
-    background-color: #fffafa;
-    /* display: flex; */
-  }
-  
-  .border-image {
-    border-radius: 10px;
-    border: 0.5px solid rgb(44, 34, 34);
-  }
-  
-  .desc {
-    box-sizing: border-box;
-    margin-left: 25%;
-    margin-right: 25%;
-    border-bottom: 0.5px solid #e5e7e8;
-    height: 25%;
-    /* box-shadow: 0.2px 0.5px #e5e7e8; */
-  }
-  
-  .desc2 {
-    box-sizing: border-box;
-    margin-left: 25%;
-    margin-right: 25%;
-    border-bottom: 0.5px solid #e5e7e8;
-    height: 35%;
-    /* box-shadow: 0.2px 0.5px #e5e7e8; */
-  }
-  
-  .button {
-    float: right;
-    position: relative;
-    margin-right: 12%;
-    bottom: 150px;
-  }
-  
-  .styling {
-    border-radius: 3px;
-    padding: 10px;
-    width: 200%;
-    background-color: #33adff;
-  }
-  
-  .styling > h4 {
-    color: white;
-  }
-  
-  .button > button:hover {
-    background-color: #199ef7;
-  }
+  width: 100%;
+  height: 450px;
+}
+
+.company {
+  bottom: 110px;
+  box-sizing: border-box;
+  float: left;
+  position: relative;
+  width: 150px;
+  height: 150px;
+  padding: 4px;
+  margin-left: 8%;
+}
+
+.side {
+  width: 100%;
+  height: 300px;
+  background-color: #fffafa;
+  /* display: flex; */
+}
+
+.border-image {
+  border-radius: 10px;
+  border: 0.5px solid rgb(44, 34, 34);
+}
+
+.desc {
+  box-sizing: border-box;
+  margin-left: 25%;
+  margin-right: 25%;
+  margin-top: 0px;
+  /* border-bottom: 0.5px solid #e5e7e8; */
+  height: 25%;
+  /* box-shadow: 0.2px 0.5px #e5e7e8; */
+}
+
+.desc2 {
+  box-sizing: border-box;
+  margin-left: 25%;
+  margin-right: 25%;
+  /* border-bottom: 0.5px solid #e5e7e8; */
+  height: 35%;
+  /* box-shadow: 0.2px 0.5px #e5e7e8; */
+}
+
+.button {
+  float: right;
+  position: relative;
+  margin-right: 12%;
+  bottom: 150px;
+}
+
+.styling {
+  border-radius: 5px;
+  padding: 10px;
+  width: 200%;
+  background-color: #33adff;
+}
+
+.styling > h4 {
+  color: white;
+}
+
+.button > button:hover {
+  background-color: #199ef7;
+}
